@@ -90,6 +90,7 @@
     <File name="Mono.Addins.Localization/StringResourceLocalizer.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Addins.Localization/GettextLocalizer.cs" subtype="Code" buildaction="Compile" />
     <File name="Mono.Addins.Localization/GettextDomain.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mono.Addins.Localization/IPluralAddinLocalizer.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
